--- a/config/e2e.yaml
+++ b/config/e2e.yaml
@@ -23,8 +23,8 @@ MODEL:
 
 
 TRAIN:
-  GPU: [0,1,2,3]
-  BATCH_SIZE: 64 # total batch size on a single node if multiprocessing_distributed else batch size on one gpu
+  GPU: [0]
+  BATCH_SIZE: 2 # total batch size on a single node if multiprocessing_distributed else batch size on one gpu
   NUM_WORKER: 8 # same as BATCH_SIZE
   LR: 0.0001
   EPOCHS: 40
@@ -81,32 +81,17 @@ AUGMENTATION:
 DATA:
   DATASET: 'refcoco'
   MAX_TOKEN: 20
-  INPUT_SHAPE: [512, 512] 
+  INPUT_SHAPE: [480, 480] 
   MEAN: [0.485, 0.456, 0.406]
   STD: [0.229, 0.224, 0.225]
   ANN_PATH: {
-  'refcoco':'./data/anns/refcoco.json',
-  'refcoco+': './data/anns/refcoco+.json',
-  'refcocog': './data/anns/refcocog.json',
-  'referit': './data/anns/refclef.json',
-  'flickr': './data/anns/flickr.json',
-  'vg': './data/anns/vg.json',
-  'merge':'./data/anns/merge.json'
+  'refcoco':'./data/anns/refcoco.json'
   }
 
   IMAGE_PATH: {
-              'refcoco': './data/images/coco',
-              'refcoco+': './data/images/coco',
-              'refcocog': './data/images/coco',
-              'referit': './data/images/refclef',
-              'flickr': './data/images/flickr',
-              'vg':'./data/images/VG',
-              'merge':'./data/images/'
+              'refcoco': './data/images/coco'
           }
 
   MASK_PATH: {
-  'refcoco': './data/masks/refcoco',
-  'refcoco+': './data/masks/refcoco+',
-  'refcocog': './data/masks/refcocog',
-  'referit': './data/masks/refclef'
+  'refcoco': './data/masks/refcoco'
   }
