--- a/config/e2e.yaml
+++ b/config/e2e.yaml
@@ -20,6 +20,7 @@ MODEL:
   ANCHORS: [[137, 256], [248, 272], [386, 271]]
   ANCH_MASK: [[0, 1, 2]]
   N_CLASSES: 0
+  CHECKPOINT_PATH: '/home/jess/TaskSeg/DIT/logs/e2e/h/30006/ckpt/last.pth'
 
 
 TRAIN:
